--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,21 +518,21 @@ footer {
   }
 
   .expMain {
-    flex-direction: column;
+    flex-direction: row;
     margin-top: 30px;
   }
 
   .expNav {
-    width: 100%;
+    width: 30%;
   }
 
   .expMain .expNav ul li {
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 0px 0px 10px;
   }
 
   .expContent {
-    width: 100%;
-    border-radius: 0px 0px 10px 10px;
+    width: 70%;
+    border-radius: 10px;
   }
   .card {
     justify-content: center;
@@ -628,21 +628,21 @@ footer {
   }
 
   .expMain {
-    flex-direction: column;
+    flex-direction: row;
     margin-top: 30px;
   }
 
   .expNav {
-    width: 100%;
+    width: 30%;
   }
 
   .expMain .expNav ul li {
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 0px 0px 10px;
   }
 
   .expContent {
-    width: 100%;
-    border-radius: 0px 0px 10px 10px;
+    width: 70%;
+    border-radius: 10px;
   }
   .card {
     justify-content: center;
